--- a/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/ocr.mdx
@@ -6,6 +6,7 @@ sidebar_label: Ocr
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -101,7 +102,46 @@ TypeScript
 
 <SectionContent slot="content" id="operation-ocr_v1_ocr_post+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.ocr.process({\n    model: \"CX-9\",\n    document: {\n      documentUrl: \"https://upset-labourer.net/\",\n      type: \"document_url\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.ocr.process({\n    model: \"CX-9\",\n    document: {\n      documentUrl: \"https://upset-labourer.net/\",\n      type: \"document_url\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-ocr_v1_ocr_post+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-ocr_v1_ocr_post+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.ocr.process(model="CX-9", document={
+        "image_url": {
+            "url": "https://measly-scrap.com",
+        },
+        "type": "image_url",
+    })
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
