--- a/examples/nextra/mistral/src/app/api/endpoint/classifiers/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/classifiers/page.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Classifiers
 import "@speakeasy-api/docs-md-react/nextra.css";
 
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutDescription,
   ExpandableBreakoutProperties,
@@ -83,7 +84,47 @@ TypeScript
   id="operation-moderations_v1_moderations_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderate({\n    model: \"Durango\",\n    inputs: [\n      \"<value 1>\",\n      \"<value 2>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderate({\n    model: \"Durango\",\n    inputs: [\n      \"<value 1>\",\n      \"<value 2>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-moderations_v1_moderations_post_code-samples_python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-moderations_v1_moderations_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.classifiers.moderate(model="Durango", inputs=[
+        "<value 1>",
+        "<value 2>",
+    ])
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -374,7 +415,52 @@ TypeScript
   id="operation-chat_moderations_v1_chat_moderations_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderateChat({\n    inputs: [\n      {\n        content: \"<value>\",\n        role: \"tool\",\n      },\n    ],\n    model: \"LeBaron\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.moderateChat({\n    inputs: [\n      {\n        content: \"<value>\",\n        role: \"tool\",\n      },\n    ],\n    model: \"LeBaron\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-chat_moderations_v1_chat_moderations_post_code-samples_python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-chat_moderations_v1_chat_moderations_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.classifiers.moderate_chat(inputs=[
+        {
+            "content": "<value>",
+            "role": "tool",
+        },
+    ], model="LeBaron")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3410,7 +3496,49 @@ TypeScript
   id="operation-classifications_v1_classifications_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classify({\n    model: \"Silverado\",\n    inputs: [\n      \"<value 1>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classify({\n    model: \"Silverado\",\n    inputs: [\n      \"<value 1>\",\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-classifications_v1_classifications_post_code-samples_python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-classifications_v1_classifications_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.classifiers.classify(model="Silverado", inputs=[
+        "<value 1>",
+    ])
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3670,7 +3798,56 @@ TypeScript
   id="operation-chat_classifications_v1_chat_classifications_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classifyChat({\n    model: \"Camry\",\n    inputs: [\n      {\n        messages: [\n          {\n            content: \"<value>\",\n            role: \"system\",\n          },\n        ],\n      },\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.classifiers.classifyChat({\n    model: \"Camry\",\n    inputs: [\n      {\n        messages: [\n          {\n            content: \"<value>\",\n            role: \"system\",\n          },\n        ],\n      },\n    ],\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-chat_classifications_v1_chat_classifications_post_code-samples_python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-chat_classifications_v1_chat_classifications_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.classifiers.classify_chat(model="Camry", inputs=[
+        {
+            "messages": [
+                {
+                    "content": "<value>",
+                    "role": "system",
+                },
+            ],
+        },
+    ])
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
