--- a/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/fim/page.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Fim
 import "@speakeasy-api/docs-md-react/nextra.css";
 
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutDescription,
   ExpandableBreakoutProperties,
@@ -92,7 +93,47 @@ TypeScript
   id="operation-fim_completion_v1_fim_completions_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fim.complete({\n    model: \"codestral-2405\",\n    prompt: \"def\",\n    suffix: \"return a+b\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.fim.complete({\n    model: \"codestral-2405\",\n    prompt: \"def\",\n    suffix: \"return a+b\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-fim_completion_v1_fim_completions_post_code-samples_python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-fim_completion_v1_fim_completions_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.fim.complete(model="codestral-2405", prompt="def", top_p=1, stream=False, suffix="return a+b")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
