--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries.mdx
@@ -6,6 +6,7 @@ sidebar_label: Beta Libraries
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -92,7 +93,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_list_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.list();\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.list();\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_list_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_list_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.list()
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1455,7 +1490,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_create_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.create({\n    name: \"<value>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.create({\n    name: \"<value>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_create_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_create_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.create(name="<value>")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2940,7 +3009,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_get_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.get({\n    libraryId: \"d0d23a1e-bfe5-45e7-b7bb-22a4ea78d47f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.get({\n    libraryId: \"d0d23a1e-bfe5-45e7-b7bb-22a4ea78d47f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_get_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_get_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.get(library_id="d0d23a1e-bfe5-45e7-b7bb-22a4ea78d47f")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -4202,7 +4305,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_update_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.update({\n    libraryId: \"e01880c3-d0b5-4a29-8b1b-abdb8ce917e4\",\n    libraryInUpdate: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.update({\n    libraryId: \"e01880c3-d0b5-4a29-8b1b-abdb8ce917e4\",\n    libraryInUpdate: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_update_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_update_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.update(library_id="e01880c3-d0b5-4a29-8b1b-abdb8ce917e4")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -5676,7 +5813,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_delete_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.delete({\n    libraryId: \"6cad0b6e-fd2e-4d11-a48b-21d30fb7c17a\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.delete({\n    libraryId: \"6cad0b6e-fd2e-4d11-a48b-21d30fb7c17a\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_delete_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_delete_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.delete(library_id="6cad0b6e-fd2e-4d11-a48b-21d30fb7c17a")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
