--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/accesses.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/accesses.mdx
@@ -6,6 +6,7 @@ sidebar_label: Beta Libraries Accesses
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -92,7 +93,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_share_list_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.list({\n    libraryId: \"d2169833-d8e2-416e-a372-76518d3d99c2\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.list({\n    libraryId: \"d2169833-d8e2-416e-a372-76518d3d99c2\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_share_list_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_share_list_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.accesses.list(library_id="d2169833-d8e2-416e-a372-76518d3d99c2")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -843,7 +878,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_share_create_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.updateOrCreate({\n    libraryId: \"36de3a24-5b1c-4c8f-9d84-d5642205a976\",\n    sharingIn: {\n      orgId: \"aadd9ae1-f285-4437-884a-091c77efa6fd\",\n      level: \"Viewer\",\n      shareWithUuid: \"0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.updateOrCreate({\n    libraryId: \"36de3a24-5b1c-4c8f-9d84-d5642205a976\",\n    sharingIn: {\n      orgId: \"aadd9ae1-f285-4437-884a-091c77efa6fd\",\n      level: \"Viewer\",\n      shareWithUuid: \"0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_share_create_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_share_create_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.accesses.update_or_create(library_id="36de3a24-5b1c-4c8f-9d84-d5642205a976", org_id="aadd9ae1-f285-4437-884a-091c77efa6fd", level="Viewer", share_with_uuid="0ae92ecb-21ed-47c5-9f7e-0b2cbe325a20", share_with_type="User")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1767,7 +1836,41 @@ TypeScript
 
 <SectionContent slot="content" id="operation-libraries_share_delete_v1+code-samples+typescript">
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.delete({\n    libraryId: \"709e3cad-9fb2-4f4e-bf88-143cf1808107\",\n    sharingDelete: {\n      orgId: \"0814a235-c2d0-4814-875a-4b85f93d3dc7\",\n      shareWithUuid: \"b843cc47-ce8f-4354-8cfc-5fcd7fb2865b\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.accesses.delete({\n    libraryId: \"709e3cad-9fb2-4f4e-bf88-143cf1808107\",\n    sharingDelete: {\n      orgId: \"0814a235-c2d0-4814-875a-4b85f93d3dc7\",\n      shareWithUuid: \"b843cc47-ce8f-4354-8cfc-5fcd7fb2865b\",\n      shareWithType: \"User\",\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_share_delete_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_share_delete_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.accesses.delete(library_id="709e3cad-9fb2-4f4e-bf88-143cf1808107", org_id="0814a235-c2d0-4814-875a-4b85f93d3dc7", share_with_uuid="b843cc47-ce8f-4354-8cfc-5fcd7fb2865b", share_with_type="User")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
