--- a/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/documents.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/beta/libraries/documents.mdx
@@ -6,6 +6,7 @@ sidebar_label: Beta Libraries Documents
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -97,7 +98,41 @@ TypeScript
   id="operation-libraries_documents_list_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.list({\n    libraryId: \"5c3ca4cd-62bc-4c71-ad8a-1531ae80d078\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.list({\n    libraryId: \"5c3ca4cd-62bc-4c71-ad8a-1531ae80d078\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_list_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_documents_list_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.list(library_id="5c3ca4cd-62bc-4c71-ad8a-1531ae80d078", page_size=100, page=0, sort_by="created_at", sort_order="desc")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2024,7 +2059,44 @@ TypeScript
   id="operation-libraries_documents_upload_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.upload({\n    libraryId: \"a02150d9-5ee0-4877-b62c-28b1fcdf3b76\",\n    requestBody: {\n      file: await openAsBlob(\"example.file\"),\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.upload({\n    libraryId: \"a02150d9-5ee0-4877-b62c-28b1fcdf3b76\",\n    requestBody: {\n      file: await openAsBlob(\"example.file\"),\n    },\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_upload_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_documents_upload_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.upload(library_id="a02150d9-5ee0-4877-b62c-28b1fcdf3b76", file={
+        "file_name": "example.file",
+        "content": open("example.file", "rb"),
+    })
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3713,7 +3785,41 @@ TypeScript
   id="operation-libraries_documents_get_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.get({\n    libraryId: \"03d908c8-90a1-44fd-bf3a-8490fb7c9a03\",\n    documentId: \"90973aec-0508-4375-8b00-91d732414745\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.get({\n    libraryId: \"03d908c8-90a1-44fd-bf3a-8490fb7c9a03\",\n    documentId: \"90973aec-0508-4375-8b00-91d732414745\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_get_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_documents_get_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.get(library_id="03d908c8-90a1-44fd-bf3a-8490fb7c9a03", document_id="90973aec-0508-4375-8b00-91d732414745")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -5091,7 +5197,41 @@ TypeScript
   id="operation-libraries_documents_update_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.update({\n    libraryId: \"3ddd8d93-dca5-4a6d-980d-173226c35742\",\n    documentId: \"2a25e44c-b160-40ca-b5c2-b65fb2fcae34\",\n    documentUpdateIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.update({\n    libraryId: \"3ddd8d93-dca5-4a6d-980d-173226c35742\",\n    documentId: \"2a25e44c-b160-40ca-b5c2-b65fb2fcae34\",\n    documentUpdateIn: {},\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_update_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_documents_update_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.update(library_id="3ddd8d93-dca5-4a6d-980d-173226c35742", document_id="2a25e44c-b160-40ca-b5c2-b65fb2fcae34")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -6608,7 +6748,40 @@ TypeScript
   id="operation-libraries_documents_delete_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.delete({\n    libraryId: \"005daae9-d42e-407d-82d7-2261c6a1496c\",\n    documentId: \"edc236b0-baff-49a9-884b-4ca36a258da4\",\n  });\n\n\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.delete({\n    libraryId: \"005daae9-d42e-407d-82d7-2261c6a1496c\",\n    documentId: \"edc236b0-baff-49a9-884b-4ca36a258da4\",\n  });\n\n\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_delete_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-libraries_documents_delete_v1+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    mistral.beta.libraries.documents.delete(library_id="005daae9-d42e-407d-82d7-2261c6a1496c", document_id="edc236b0-baff-49a9-884b-4ca36a258da4")
+
+    # Use the SDK ...
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -6746,7 +6919,47 @@ TypeScript
   id="operation-libraries_documents_get_text_content_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.textContent({\n    libraryId: \"1d177215-3b6b-45ba-9fa9-baf773223bec\",\n    documentId: \"60214c91-2aba-4692-a4e6-a53365de8caf\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.textContent({\n    libraryId: \"1d177215-3b6b-45ba-9fa9-baf773223bec\",\n    documentId: \"60214c91-2aba-4692-a4e6-a53365de8caf\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-libraries_documents_get_text_content_v1+code-samples+python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-libraries_documents_get_text_content_v1+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.text_content(library_id="1d177215-3b6b-45ba-9fa9-baf773223bec", document_id="60214c91-2aba-4692-a4e6-a53365de8caf")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7055,7 +7268,44 @@ TypeScript
   id="operation-libraries_documents_get_status_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.status({\n    libraryId: \"e6906f70-368f-4155-80da-c1718f01bc43\",\n    documentId: \"2c904915-d831-4e9d-a345-8ce405bcef66\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.status({\n    libraryId: \"e6906f70-368f-4155-80da-c1718f01bc43\",\n    documentId: \"2c904915-d831-4e9d-a345-8ce405bcef66\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_get_status_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-libraries_documents_get_status_v1+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.status(library_id="e6906f70-368f-4155-80da-c1718f01bc43", document_id="2c904915-d831-4e9d-a345-8ce405bcef66")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7431,7 +7681,47 @@ TypeScript
   id="operation-libraries_documents_get_signed_url_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.getSignedUrl({\n    libraryId: \"23cf6904-a602-4ee8-9f5b-8efc557c336d\",\n    documentId: \"48598486-df71-4994-acbb-1133c72efa8c\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.getSignedUrl({\n    libraryId: \"23cf6904-a602-4ee8-9f5b-8efc557c336d\",\n    documentId: \"48598486-df71-4994-acbb-1133c72efa8c\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-libraries_documents_get_signed_url_v1+code-samples+python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-libraries_documents_get_signed_url_v1+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.get_signed_url(library_id="23cf6904-a602-4ee8-9f5b-8efc557c336d", document_id="48598486-df71-4994-acbb-1133c72efa8c")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7677,7 +7967,47 @@ TypeScript
   id="operation-libraries_documents_get_extracted_text_signed_url_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.extractedTextSignedUrl({\n    libraryId: \"a6f15de3-1e82-4f95-af82-851499042ef8\",\n    documentId: \"9749d4f9-24e5-4ca2-99a3-a406863f805d\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.beta.libraries.documents.extractedTextSignedUrl({\n    libraryId: \"a6f15de3-1e82-4f95-af82-851499042ef8\",\n    documentId: \"9749d4f9-24e5-4ca2-99a3-a406863f805d\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-libraries_documents_get_extracted_text_signed_url_v1+code-samples+python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-libraries_documents_get_extracted_text_signed_url_v1+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.beta.libraries.documents.extracted_text_signed_url(library_id="a6f15de3-1e82-4f95-af82-851499042ef8", document_id="9749d4f9-24e5-4ca2-99a3-a406863f805d")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -7923,7 +8253,43 @@ TypeScript
   id="operation-libraries_documents_reprocess_v1+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.reprocess({\n    libraryId: \"51b29371-de8f-4ba4-932b-a0bafb3a7f64\",\n    documentId: \"3052422c-49ca-45ac-a918-cadb35d61fd8\",\n  });\n\n\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  await mistral.beta.libraries.documents.reprocess({\n    libraryId: \"51b29371-de8f-4ba4-932b-a0bafb3a7f64\",\n    documentId: \"3052422c-49ca-45ac-a918-cadb35d61fd8\",\n  });\n\n\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-libraries_documents_reprocess_v1+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-libraries_documents_reprocess_v1+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    mistral.beta.libraries.documents.reprocess(library_id="51b29371-de8f-4ba4-932b-a0bafb3a7f64", document_id="3052422c-49ca-45ac-a918-cadb35d61fd8")
+
+    # Use the SDK ...
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
