--- a/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
+++ b/examples/docusaurus/mistral/docs/api/endpoint/files.mdx
@@ -6,6 +6,7 @@ sidebar_label: Files
 import "@speakeasy-api/docs-md-react/docusaurus.css";
 
 import {
+  CodeSample,
   DebugPlaceholder,
   ExpandableBreakout,
   ExpandableBreakoutDefaultValue,
@@ -97,7 +98,41 @@ TypeScript
   id="operation-files_api_routes_list_files+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.list({});\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.list({});\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_list_files+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-files_api_routes_list_files+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.list(page=0, page_size=100)
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -1188,7 +1223,44 @@ TypeScript
   id="operation-files_api_routes_upload_file+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.upload({\n    file: await openAsBlob(\"example.file\"),\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\nimport { openAsBlob } from \"node:fs\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.upload({\n    file: await openAsBlob(\"example.file\"),\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_upload_file+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-files_api_routes_upload_file+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.upload(file={
+        "file_name": "example.file",
+        "content": open("example.file", "rb"),
+    })
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -2404,7 +2476,44 @@ TypeScript
   id="operation-files_api_routes_retrieve_file+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.retrieve({\n    fileId: \"f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.retrieve({\n    fileId: \"f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_retrieve_file+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_retrieve_file+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.retrieve(file_id="f2a27685-ca4e-4dc2-9f2b-88c422c3e0f6")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3328,7 +3437,41 @@ TypeScript
   id="operation-files_api_routes_delete_file+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.delete({\n    fileId: \"3b6d45eb-e30b-416f-8019-f47e2e93d930\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.delete({\n    fileId: \"3b6d45eb-e30b-416f-8019-f47e2e93d930\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_delete_file+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent slot="content" id="operation-files_api_routes_delete_file+code-samples+python">
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.delete(file_id="3b6d45eb-e30b-416f-8019-f47e2e93d930")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3686,7 +3829,44 @@ TypeScript
   id="operation-files_api_routes_download_file+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.download({\n    fileId: \"f8919994-a4a1-46b2-8b5b-06335a4300ce\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.download({\n    fileId: \"f8919994-a4a1-46b2-8b5b-06335a4300ce\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_download_file+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_download_file+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.download(file_id="f8919994-a4a1-46b2-8b5b-06335a4300ce")
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
@@ -3908,7 +4088,44 @@ TypeScript
   id="operation-files_api_routes_get_signed_url+code-samples+typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.getSignedUrl({\n    fileId: \"06a020ab-355c-49a6-b19d-304b7c01699f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.files.getSignedUrl({\n    fileId: \"06a020ab-355c-49a6-b19d-304b7c01699f\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab slot="tab" id="operation-files_api_routes_get_signed_url+code-samples+python">
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-files_api_routes_get_signed_url+code-samples+python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.files.get_signed_url(file_id="06a020ab-355c-49a6-b19d-304b7c01699f", expiry=24)
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
