--- a/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
+++ b/examples/nextra/mistral/src/app/api/endpoint/agents/page.mdx
@@ -5,6 +5,7 @@ sidebarTitle: Agents
 import "@speakeasy-api/docs-md-react/nextra.css";
 
 import {
+  CodeSample,
   ExpandableBreakout,
   ExpandableBreakoutDescription,
   ExpandableBreakoutProperties,
@@ -83,7 +84,52 @@ TypeScript
   id="operation-agents_completion_v1_agents_completions_post_code-samples_typescript"
 >
 
-<TryItNow dependencyBundleUrl="/try-it-now/deps.js" defaultValue={"import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.agents.complete({\n    messages: [\n      {\n        content: \"Who is the best French painter? Answer in one short sentence.\",\n        role: \"user\",\n      },\n    ],\n    agentId: \"<id>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n"} />
+<TryItNow
+  dependencyBundleUrl="/try-it-now/deps.js"
+  defaultValue={`import { Mistral } from \"@mistralai/mistralai\";\n\nconst mistral = new Mistral({\n  apiKey: \"MISTRAL_API_KEY\",\n});\n\nasync function run() {\n  const result = await mistral.agents.complete({\n    messages: [\n      {\n        content: \"Who is the best French painter? Answer in one short sentence.\",\n        role: \"user\",\n      },\n    ],\n    agentId: \"<id>\",\n  });\n\n  console.log(result);\n}\n\nrun();\n`}
+/>
+
+</SectionContent>
+
+<SectionTab
+  slot="tab"
+  id="operation-agents_completion_v1_agents_completions_post_code-samples_python"
+>
+
+Python
+
+</SectionTab>
+
+<SectionContent
+  slot="content"
+  id="operation-agents_completion_v1_agents_completions_post_code-samples_python"
+>
+
+<CodeSample>
+
+```python
+from mistralai import Mistral
+import os
+
+
+with Mistral(
+    api_key=os.getenv("MISTRAL_API_KEY", ""),
+) as mistral:
+
+    res = mistral.agents.complete(messages=[
+        {
+            "content": "Who is the best French painter? Answer in one short sentence.",
+            "role": "user",
+        },
+    ], agent_id="<id>", stream=False)
+
+    # Handle response
+    print(res)
+
+
+```
+
+</CodeSample>
 
 </SectionContent>
 
